@@ -225,7 +225,7 @@ public abstract class AbstractPlaceDelegate extends BaseTripleADelegate
 
     while (!unitsLeftToPlace.isEmpty() && !producers.isEmpty()) {
       // Get next producer territory
-      final Territory producer = producers.remove(0);
+      final Territory producer = producers.removeFirst();
 
       int maxPlaceable = maxPlaceableMap.getInt(producer);
       if (maxPlaceable == 0) {
@@ -253,26 +253,18 @@ public abstract class AbstractPlaceDelegate extends BaseTripleADelegate
       }
       final int neededExtra = unitsCanBePlacedByThisProducer.size() - maxForThisProducer;
       if (maxPlaceable > maxForThisProducer) {
-        freePlacementCapacity(producer, neededExtra, unitsCanBePlacedByThisProducer, at, player);
+        freePlacementCapacity(producer, neededExtra, unitsCanBePlacedByThisProducer, player);
         final int newMaxForThisProducer =
             getMaxUnitsToBePlacedFrom(producer, unitsCanBePlacedByThisProducer, at, player);
         if (newMaxForThisProducer != maxPlaceable && neededExtra > newMaxForThisProducer) {
-          throw new IllegalStateException(
-              "getMaxUnitsToBePlaced originally returned: "
-                  + maxPlaceable
-                  + ", \nWhich is not the same as it is returning after using "
-                  + "freePlacementCapacity: "
-                  + newMaxForThisProducer
-                  + ", \nFor territory: "
-                  + at.getName()
-                  + ", Current Producer: "
-                  + producer.getName()
-                  + ", All Producers: "
-                  + producers
-                  + ", \nUnits Total: "
-                  + MyFormatter.unitsToTextNoOwner(units)
-                  + ", Units Left To Place By This Producer: "
-                  + MyFormatter.unitsToTextNoOwner(unitsCanBePlacedByThisProducer));
+          // Speculative count and freePlacementCapacity disagreed (the two algorithms
+          // for computing placements, that there are two different algorithms for the same
+          // thing is a problem in of itself).
+          // Trust the freshly-measured capacity and let any leftover units hit the
+          // "not enough territories" message.
+          if (newMaxForThisProducer != -1) {
+            maxPlaceable = newMaxForThisProducer;
+          }
         }
       }
       final Collection<Unit> placedUnits =
@@ -393,7 +385,6 @@ public abstract class AbstractPlaceDelegate extends BaseTripleADelegate
       final Territory producer,
       final int freeSize,
       final Collection<Unit> unitsLeftToPlace,
-      final Territory at,
       final GamePlayer player) {
     // placements of the producer that could be redone by other territories
     final List<UndoablePlacement> redoPlacements = new ArrayList<>();
@@ -492,7 +483,14 @@ public abstract class AbstractPlaceDelegate extends BaseTripleADelegate
           continue;
         }
         final Territory newProducer = tuple.getSecond();
-        int leftToPlace = getMaxUnitsToBePlacedFrom(newProducer, unitsLeftToPlace, at, player);
+        // Capacity is for the placement being split, not the current placement at `at`.
+        final Territory splitPlaceTerritory = placement.getPlaceTerritory();
+        int leftToPlace =
+            getMaxUnitsToBePlacedFrom(
+                newProducer,
+                unitsPlacedInTerritorySoFar(splitPlaceTerritory),
+                splitPlaceTerritory,
+                player);
         foundSpaceTotal += leftToPlace;
         // divide set of units that get placed
         final Collection<Unit> unitsForOldProducer = new ArrayList<>(placement.getUnits());
@@ -519,7 +517,7 @@ public abstract class AbstractPlaceDelegate extends BaseTripleADelegate
       }
     }
     if (foundSpaceTotal < freeSize && unusedSplitPlacements) {
-      freePlacementCapacity(producer, (freeSize - foundSpaceTotal), unitsLeftToPlace, at, player);
+      freePlacementCapacity(producer, (freeSize - foundSpaceTotal), unitsLeftToPlace, player);
     }
   }
 
